packages/app/styles/index.css
@import 'tailwindcss';

@import './vars.css';
@import './global.css';
@import './shadcn.css';
@import './utility.css';
@import './components.css';
@import './custom.css';
@import './react-horizontal-scrolling-menu.css';
@import 'tw-animate-css';

@custom-variant dark (&:where([data-theme='dark'], [data-theme='dark'] *));

@theme {
	--color-std-50: oklch(98.5% 0 0);
	--color-std-100: oklch(96.7% 0 0);
	--color-std-150: oklch(94.2% 0 0);
	--color-std-200: oklch(92.8% 0 0);
	--color-std-300: oklch(87.2% 0 0);
	--color-std-400: oklch(70.7% 0 0);
	--color-std-500: oklch(55.1% 0 0);
	--color-std-600: oklch(44.6% 0 0);
	--color-std-700: oklch(37.3% 0 0);
	--color-std-800: oklch(27.8% 0 0);
	--color-std-900: oklch(21% 0 0);
	--color-std-950: oklch(13% 0 0);
	--color-std-black: #000;
	--color-std-white: #fff;

	--text-xsm: 13px;
	--text-xsm--line-height: 1.25rem;

	--color-dark: oklch(from var(--color-std-900) l c h / 0.9);
	--color-solid: oklch(from var(--color-std-900) l c h / 0.7);
	--color-gray: oklch(from var(--color-std-900) l c h / 0.4);
	--color-light: oklch(from var(--color-std-600) l c h / 0.6);
	--color-soft: oklch(from var(--color-std-600) l c h / 0.4);
	--color-softlight: oklch(from var(--color-std-900) l c h / 0.3);

	--color-active: oklch(from var(--color-std-100) l c h / 1);
	--color-click: oklch(from var(--color-std-150) l c h / 1);

	--color-border-solid: oklch(from var(--color-std-900) l c h / 0.2);
	--color-border-solid-active: oklch(from var(--color-std-900) l c h / 0.5);
	--color-border-gray: oklch(from var(--color-std-600) l c h / 0.1);
	--color-border-light: oklch(from var(--color-std-400) l c h / 0.1);

	--font-sans: 'Geist';
	--font-mono: 'GeistMono';

	--color-under: oklch(from var(--color-std-100) l c h / 0.8);
	--color-layout-under: oklch(from var(--color-std-900) l c h / 1);
	--color-layout-over: oklch(from var(--color-std-white) l c h / 1);
}

[data-theme='dark'] {
	--color-std-50: oklch(0.18 0 0);
	--color-std-100: oklch(0.24 0 0);
	--color-std-150: oklch(0.32 0 0);
	--color-std-200: oklch(0.378 0 0);
	--color-std-300: oklch(0.473 0 0);
	--color-std-400: oklch(0.546 0 0);
	--color-std-500: oklch(0.651 0 0);
	--color-std-600: oklch(0.707 0 0);
	--color-std-700: oklch(0.872 0 0);
	--color-std-800: oklch(0.928 0 0);
	--color-std-900: oklch(0.967 0 0);
	--color-std-950: oklch(0.985 0 0);
	--color-std-black: #fff;
	--color-std-white: #000;

	--color-active: oklch(from var(--color-std-150) l c h / 0.6);
	--color-click: oklch(from var(--color-std-200) l c h / 0.6);

	--color-border-light: oklch(from var(--color-std-500) l c h / 0.1);

	--color-under: oklch(from var(--color-std-700) l c h / 1);
	--color-layout-under: oklch(from var(--color-std-white) l c h / 1);
	--color-layout-over: oklch(from var(--color-std-100) l c h / 0.8);
}

